tests/sksl/errors/ArgumentCountMismatch.dsl.glsl
### Compilation failed:

error: call to 'foo' expected 1 argument, but found 2

1 error
